--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
+    "@react-native-firebase/storage": "^20.5.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-action-sheet": "^2.2.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.6.3",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.2",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
